--- a/.github/workflows/sign.yml
+++ b/.github/workflows/sign.yml
@@ -1,13 +1,15 @@
 name: 葫芦侠3楼签到
 
 on:
-  workflow_dispatch: # 手动触发
-  schedule: # 计划任务触发
-    - cron: '0 1,13 * * *'
-    # cron表达式，时区是UTC时间，比我们早8小时，如上所表示的是每天0点0分（24点整）
-    # 建议每个人通过设置 GitHub Environments 的方式来设定为自己的目标运行时间（详细设置方法见文档说明）
-  watch:
-    types: [started]
+  push:
+    branches: main
+  gollum:
+  workflow_dispatch:
+  
+   CRON_TZ=Asia/Shanghai TZ=Asia/Shanghai- cron: '0 0,23 * * *'
+
+ 
+
 jobs:
   build:
     runs-on: ubuntu-latest
